Add going to previous page when header clicked.

--- a/fuzzer/ullyeo/templates/detail.html
+++ b/fuzzer/ullyeo/templates/detail.html
@@ -7,7 +7,7 @@
           <a href="/"><h1 class="title is-1">Ullyeo Fuzzer</h1></a>
         </div>
         <div class="column">
-          <h2 class="subtitle">{{ detail_site_host }}</h2>
+          <a href="/detail/{{ detail_site_host }}"><h2 class="subtitle">{{ detail_site_host }}</h2></a>
         </div>
       </div>
       <hr/>
