MODULE 별로 보여지는 것들 추가
1. request test 기능
2. module count 필터 없던거 추가
3. 냥냥
4. pep8

--- a/fuzzer/ullyeo/templates/detail.html
+++ b/fuzzer/ullyeo/templates/detail.html
@@ -32,7 +32,7 @@
         <tbody>
         {% for result in results %}
           <tr>
-            <th>{{ loop.index }}</th>
+            <th>{{ result.id }}</th>
             <td><a href="/detail/{{ detail_site_host }}/{{ result.id }}">{{ result.name }}</a></td>
             <th>{{ result.count }}</th>
           </tr>
