--- a/fuzzer/ullyeo/templates/detail_module.html
+++ b/fuzzer/ullyeo/templates/detail_module.html
@@ -32,7 +32,7 @@
         <tbody>
         {% for result in results %}
           <tr>
-            <th>{{ loop.index }}</th>
+            <th>{{ result.id }}</th>
             <td>{{ result.url }}</td>
             <th>{{ result.attack_query }}</th>
           </tr>
