GUI 렌더 기능 완료.

--- a/fuzzer/ullyeo/templates/index.html
+++ b/fuzzer/ullyeo/templates/index.html
@@ -10,6 +10,8 @@
         </div>
       </div>
     <hr/>
+    <a class="button is-black" href="/delete/no_vuln">Delete sites that don't have vulnerability</a>
+    <hr/>
       <table class="table">
         <thead>
           <tr>
