Add dynamic insert modules to db feature.

--- a/fuzzer/ullyeo/templates/detail_module.html
+++ b/fuzzer/ullyeo/templates/detail_module.html
@@ -91,7 +91,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th><abbr title="Position">Pos</abbr></th>
+            <th><abbr title="Position">Attack ID</abbr></th>
             <th>method</th>
             <th>url</th>
             <th>attack_query</th>
@@ -103,7 +103,7 @@
         </thead>
         <tfoot>
           <tr>
-            <th><abbr title="Position">Pos</abbr></th>
+            <th><abbr title="Position">Attack ID</abbr></th>
             <th>method</th>
             <th>url</th>
             <th>attack_query</th>
