--- a/fuzzer/ullyeo/templates/detail.html
+++ b/fuzzer/ullyeo/templates/detail.html
@@ -17,14 +17,14 @@
       <table class="table">
         <thead>
           <tr>
-            <th><abbr title="Position">Pos</abbr></th>
+            <th><abbr title="Position">Module ID</abbr></th>
             <th>Module Name</th>
             <th>Vuln Count</th>
           </tr>
         </thead>
         <tfoot>
           <tr>
-            <th><abbr title="Position">Pos</abbr></th>
+            <th><abbr title="Position">Module ID</abbr></th>
             <th>Module Name</th>
             <th>Vuln Count</th>
           </tr>
