--- a/fuzzer/ullyeo/templates/detail.html
+++ b/fuzzer/ullyeo/templates/detail.html
@@ -11,9 +11,39 @@
         </div>
       </div>
       <hr/>
-      Site Scanning Result
-      <hr/>
+      <h2 class="subtitle">Host Infromation</h2>
 
+
+
+      <h2 class="subtitle">Site Scanning Result</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th><abbr title="Position">Module ID</abbr></th>
+            <th>Module Name</th>
+            <th>Vuln Count</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <th><abbr title="Position">Module ID</abbr></th>
+            <th>Module Name</th>
+            <th>Vuln Count</th>
+          </tr>
+        </tfoot>
+        <tbody>
+        {% for result in results %}
+          <tr>
+            <th>{{ result.id }}</th>
+            <td><a href="/detail/{{ detail_site_host }}/{{ result.id }}">{{ result.name }}</a></td>
+            <th>{{ result.count }}</th>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      <!-- end site module -->
+      <hr/>
+      <h2 class="subtitle">Module Scanning Result</h2>
       <table class="table">
         <thead>
           <tr>
