--- a/fuzzer/ullyeo/templates/index.html
+++ b/fuzzer/ullyeo/templates/index.html
@@ -10,7 +10,7 @@
         </div>
       </div>
     <hr/>
-    <a class="button is-black" href="/delete/no_vuln">Delete sites that don't have vulnerability</a>
+    <a class="button is-black" href="/delete/no_vuln">Delete sites that don't have vulnerability</a> <a class="button is-black" href="/delete/process">Kill all process</a>
     <hr/>
       <table class="table">
         <thead>
